Closed Bug 1677211 Opened 4 years ago Closed 4 years ago

Bad performance on Google Cal transitions

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox83 --- unaffected
firefox84 --- wontfix
firefox85 --- fixed

People

(Reporter: jimm, Assigned: mattwoodrow)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR: opening then closing an existing google cal event. The event fades in and then fades out on top of the cal view. The performance here was better a week or so ago.

Profile:
https://share.firefox.dev/3lxbGsB

Looks like most of the time is spent in brush_opacity.

OS: Windows 10 → All
Hardware: Desktop → All
Severity: -- → S3
Priority: -- → P3

I can reproduce this regression, and it bisects to bug 1676332.

Assignee: nobody → matt.woodrow
Regressed by: 1676332
Has Regression Range: --- → yes

Is this just because we use D3D11_CPU_ACCESS_WRITE when we should be using WRITE | READ so that we don't end up getting uncached memory?

Flags: needinfo?(matt.woodrow)

Just setting up an opt build locally to test that!

Flags: needinfo?(matt.woodrow)

Does D3D11_MAP_WRITE_DISCARD have any positive effect here? In my PBO implementation for OpenGL, I generally like to utilize orphaning and/or GL_MAP_INVALIDATE_BUFFER_BIT to ensure that we don't stall on the previous contents of the buffer.

Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2298e1a23c6e Add Read access flags to D3D11 staging textures to avoid slow accesses when reading our intermediate results. r=jrmuizel
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch

The patch landed in nightly and beta is affected.
:mattwoodrow, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(matt.woodrow)

SW-WR is not released yet beyond nightly, so doesn't require uplift.

Flags: needinfo?(matt.woodrow)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: