Bug 1677211 - Add Read access flags to D3D11 staging textures to avoid slow accesses when reading our intermediate results. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D97106